syntax = "proto3";

import "google/protobuf/empty.proto";

package blog;

option java_package = "com.grigoryev.blog";
option java_multiple_files = true;

message Blog {
  string id = 1;
  string author = 2;
  string title = 3;
  string content = 4;
}

message FindByIdRequest {
  string id = 1;
}

service BlogService {
  rpc findById(FindByIdRequest) returns (Blog) {};
  rpc findAll(google.protobuf.Empty) returns (stream Blog) {};
}
